# LibAFL-example-fuzzer

./: Cargo.toml  README.md  build.rs
src/: .copy.rs  Makefile  lib.rs  program.c
